<resources>
  <string name="start_game_label">Start Game</string>
  <string name="guess_input_hint">Guess</string>
  <string name="submit_guess_label">Submit Guess</string>
  <string name="snackbar_error_format">Error: %s</string>
  <string name="solved_message_format">You guessed the code (%1$s) in %2$d guesses!</string>
  <string name="new_game_title">Start new game</string>
  <string name="pool_format">Pool: %s</string>
  <string name="length_format">Length: %d</string>
  <string name="code_length_key">code_length</string>
  <string name="code_length_title">Code length</string>
  <string name="pool_size_key">pool_size</string>
  <string name="pool_size_title">Pool size</string>
  <string name="show_text_key">show_text</string>
  <string name="show_text_title">Show guess text</string>
  <string name="show_text_summary_off">While guessing, the text of previous guesses will not be displayed.</string>
  <string name="show_text_summary_on">While guessing, the text of previous guesses will be displayed.</string>
  <string name="settings_title">Settings</string>
  <string name="guess_number_header">#</string>
  <string name="guess_text_header">Guess</string>
  <string name="exact_matches_header">Exact</string>
  <string name="near_matches_header">Near</string>
  <string name="master_pool">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="updated_header">Date</string>
  <string name="code_length_header">Code length</string>
  <string name="pool_size_header">Pool size</string>
  <string name="guess_count_header">Guesses</string>
  <string name="incomplete_games_fragment_label">Incomplete Games</string>
  <string name="settings_fragment_label">Settings</string>
  <string name="show_incomplete_games_tooltip">Show incomplete games</string>
  <string name="show_game_tooltip">Show current game</string>
  <string name="game_fragment_option_title">Play</string>
  <string name="incomplete_games_fragment_option_title">In-progress</string>
  <string name="play_game_title">Play</string>
  <string name="delete_game_title">Delete</string>
  <string name="code_length_label">Code length</string>
  <string name="pool_size_label">Pool size</string>
  <string name="complete_games_fragment_option_title">Scoreboard</string>
  <string name="elapsed_time_format">%1$d:%2$02d</string>
  <string name="rank_header">Rank</string>
  <string name="elapsed_time_header">Elapsed</string>
</resources>