<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingHorizontal="@dimen/half_dynamic_spacing"
  android:gravity="center_vertical">

  <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="2"
    android:text="@string/guess_number_header"/>

  <TextView
    android:id="@+id/guess_text"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="4"
    android:text="@string/guess_text_header"/>

  <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="3"
    android:text="@string/exact_matches_header"/>

  <TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_static_spacing"
    android:layout_weight="3"
    android:text="@string/near_matches_header"/>

</LinearLayout>