<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.IncompleteGamesFragment">

  <LinearLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/full_dynamic_spacing"
    android:paddingHorizontal="@dimen/half_dynamic_spacing"
    android:background="@drawable/header_background"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/updated_header"
      style="@style/ItemColumn.Header"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/code_length_header"
      style="@style/ItemColumn.Header"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/pool_size_header"
      style="@style/ItemColumn.Header"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/guess_count_header"
      style="@style/ItemColumn.Header"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/exact_matches_header"
      style="@style/ItemColumn.Header"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:layout_margin="@dimen/half_static_spacing"
      android:text="@string/near_matches_header"
      style="@style/ItemColumn.Header"/>

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/incomplete_games"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintTop_toBottomOf="@id/header"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:listitem="@layout/item_incomplete_game"/>

  <com.google.android.material.progressindicator.CircularProgressIndicator
    android:id="@+id/waiting_indicator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:indeterminate="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>